# NTU-Dynamic-Strain

./: .gitignore  Gmsh.code-workspace  LFScan.ipynb  LICENSE.md
Akantu/: CMakeLists.txt  Commands.sh  PSU-Akantu.ipynb  first.ipynb
Akantu/Ball-Drop/: Ball-Drop.cc  CMakeLists.txt
Akantu/Velocity-weakening/: CMakeLists.txt  Velocity-weakening-B.cc  Velocity-weakening.cc  Velocity-weakening.ccc  cohesive_extrinsic_ig_tg.cc
Akantu/cohesive_extrinsic_ig_tg/: CMakeLists.txt  Velocity-weakening.cc  cohesive_extrinsic_ig_tg.cc  cohesive_extrinsic_ig_tg.ccc  cohesive_extrinsic_ig_tg.hh
Gmsh/: Ball-Drop.py  Block-Assembly-B.py  Block-Assembly.py  Blocks.py  Functions.py  SAll.py  SFunctions.py  Shared-Blocks.py  Test.py  Test2.py  contact.py  contact2.py  share.py
Models/: 5cm-PMMA.msh
TeX/: Article.tex
code/: Ball-Drop-FTF.py  CohesiveCrack  CohesiveCrack.cc  CohesiveCrackPY.py  CompareCCPY.py  FolderActions.py  PlotExample.py  bindings.cc  readMaterials.py
